<resources>
    <string name="app_name">Github</string>
    <string name="user_not_found">User Not Found</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="numbersFollowing">183</string>
    <string name="followersNumber">1072</string>
    <string name="post">Followers</string>
    <string name="photo">Following</string>
    <string name="detail">Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="light">Light Mode</string>
    <string name="dark">Dark Mode</string>
</resources>